@@ -1,3 +1,8 @@
+2000-10-12  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* readnpcs.cc: Fixed monster bug that's been causing lots of
+	crashes upon game load.
+
 2000-10-11  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* actors.cc: Support ring-of-protection (which doesn't seem to
